L1VMgodata - (0.7.1)
    NEW: "erase all" command to delete the whole data base enttries.
    Handle with care!

    NEW: now the store data command overwrites existing entries if the same key was used more than one time!

-- Stefan Pietzonke <jay-t@gmx.net> Thu 26 Apr 2022 17:02 +0200


L1VMgodata - (0.7)
    Initial commit with some TCP/IP server socket code.
    This is my first go project. It will be a data base if it finished.

    Added data handling functions.
    Added mutexes, removed not needed constants.
    Added store data sockets code.
    Added get key call. Added get value call.
    Added remove data function.
    Remove data function added.

    Added save/load functions, to write/read from disk.
    Now the port and the maxdata data limit can be set on command line.

    NEW: processClient error code checks.

    NEW: added host ip command line setting.
    Added IP addresses whitelist.

-- Stefan Pietzonke <jay-t@gmx.net> Tue 19 Apr 2022 19:21 +0200